# TeleSystem

./: .gitignore  BUILD_PROFILES.md  CMakeLists.txt  HARDWARE_MIGRATION_ESP32S3_8MB.md  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults  sdkconfig.dev.defaults  sdkconfig.release.defaults  todo.txt
.devcontainer/: devcontainer.json
components/status_led/: CMakeLists.txt  Kconfig  idf_component.yml  status_led.c  status_led_effects.c  status_led_stub.c
components/tele_artifacts/: CMakeLists.txt  idf_component.yml  tele_artifacts.c
components/tele_boot_config_button/: CMakeLists.txt  idf_component.yml
components/tele_ca_store/: CMakeLists.txt  Kconfig  idf_component.yml  tele_ca_store.c
components/tele_ca_updater/: CMakeLists.txt  Kconfig  idf_component.yml  tele_ca_updater.c
components/tele_channels/: idf_component.yml
components/tele_commands/: CMakeLists.txt  idf_component.yml  tele_commands.c
components/tele_config/: CMakeLists.txt  idf_component.yml  tele_config.c  tele_config_json.c
components/tele_core_commands/: CMakeLists.txt  idf_component.yml  tele_core_commands.c
components/tele_firmware_portal_ota/: CMakeLists.txt  idf_component.yml  tele_firmware_portal_ota.c
components/tele_indicator/: CMakeLists.txt  idf_component.yml  tele_indicator.c
components/tele_manifest/: CMakeLists.txt  Kconfig  idf_component.yml  tele_manifest.c  tele_manifest_http.c  tele_manifest_internal.h  tele_manifest_json.c  tele_manifest_sha256.c
components/tele_mqtt/: CMakeLists.txt  Kconfig  idf_component.yml  tele_mqtt.c
components/tele_portal/: CMakeLists.txt  Kconfig  app_log_buffer.c  captive_portal.c  dns_server.c  idf_component.yml  web_portal.c
components/tele_portal/include/: dns_server.h
components/tele_portal_assets/: CMakeLists.txt  idf_component.yml  tele_portal_assets.c
components/tele_portal_assets/include/: tele_portal_assets.h
components/tele_portal_assets/tools/: gen_assets.py
components/tele_portal_captive/: CMakeLists.txt  idf_component.yml  tele_portal_captive.c
components/tele_portal_commands/: CMakeLists.txt  idf_component.yml  tele_portal_commands.c
components/tele_portal_config/: CMakeLists.txt  idf_component.yml  tele_portal_config.c
components/tele_portal_core/: CMakeLists.txt  http_helpers.c  idf_component.yml  tele_portal_core.c
components/tele_portal_logs/: CMakeLists.txt  Kconfig  idf_component.yml  tele_portal_logs.c
components/tele_portal_ota/: CMakeLists.txt  idf_component.yml  tele_portal_ota.c
components/tele_portal_status/: CMakeLists.txt  idf_component.yml  tele_portal_status.c
components/tele_portal_wifi/: CMakeLists.txt  idf_component.yml  tele_portal_wifi.c
components/tele_presence/: CMakeLists.txt  Kconfig  idf_component.yml  mqtt_presence.c  tele_presence.c
components/tele_signal/: CMakeLists.txt  idf_component.yml  tele_signal.c
components/tele_status/: CMakeLists.txt  idf_component.yml  tele_status.c
components/tele_system/: CMakeLists.txt  Kconfig  firmware_ota.c  idf_component.yml  power_good.c
components/tele_system_registry/: CMakeLists.txt  idf_component.yml  tele_system_registry.c
components/tele_time_sync/: CMakeLists.txt  idf_component.yml
components/tele_wifi/: CMakeLists.txt  Kconfig  device_config.c  device_config_store.c  idf_component.yml  wifi_config.c  wifi_manager.c
components/tele_wifi_device_config/: CMakeLists.txt  idf_component.yml
docs/: arquitetura_index.md  audio_acr_loop_architecture.md  componentes_manifest_updates.md  componentes_mqtt_config_status_commands.md  componentes_portal.md  componentes_sistema.md  componentes_wifi_conectividade.md  estrategia_component_manager.md  exemplo_integracao_mqtt_generico.md  home_page_branding_manual.md  main_app_estrutura_alto_nivel.md  main_audio_estrutura_alto_nivel.md  main_connectivity_estrutura_alto_nivel.md  main_portal_estrutura_alto_nivel.md  main_raiz_estrutura_alto_nivel.md  manual_mqtt_operacao.md  plano_mqtt_dispositivos_distribuidos.md  plano_nucleo_mqtt_generico.md  plano_ota_remoto_https.md  plano_reaproveitamento_proximo_projeto_led.md  roadmap_atual.md  roadmap_melhorias_faseado.md  status_led_system.md  tele_commands.md  tele_config.md  tele_indicator.md  tele_status.md  wifi_manager_architecture.md
docs/planos/: Sistema_MQTT_registro_chat_arquivo_temporario copy.md  plan.md  plano_tele_portal_componentes.md
examples/component_consumer_minimal/: CMakeLists.txt  README.md
examples/component_consumer_mqtt/: CMakeLists.txt  README.md
examples/component_consumer_portal/: CMakeLists.txt  README.md
examples/full_project_consumer/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/full_project_consumer/main/: CMakeLists.txt  app_firmware_version.h  app_indicators.c  idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  app_firmware_version.h  app_indicators.h  idf_component.yml  main.c  prepare_storage_root.cmake
main/app/: acr_analysis_control.c  acr_analysis_control.h  acr_client.c  acr_client.h  acr_config_store.c  acr_config_store.h  acr_orchestrator.c  acr_orchestrator.h  acr_parser.c  acr_parser.h  acr_routes.c  acr_routes.h  acr_runtime_status.c  acr_runtime_status.h  acr_trigger_output.c  acr_trigger_output.h  firmware_ota.c  firmware_ota.h  firmware_version.h  storage.c  storage.h  vbat_monitor.c  vbat_monitor.h
main/audio/: audio_capture.c  audio_capture.h  wav_writer.c  wav_writer.h  wm8782_probe.c  wm8782_probe.h
main/connectivity/: boot_config_button.c  boot_config_button.h  connectivity_controller.c  connectivity_controller.h  device_config_routes.c  device_config_routes.h  device_config_store.c  device_config_store.h  mqtt_presence.c  mqtt_presence.h  status_led.c  status_led.h  status_led_stub.c  time_sync.c  wifi_config.h  wifi_manager.c  wifi_manager.h
main/portal/: app_log_buffer.h  captive_portal.h  http_helpers.c  http_helpers.h  ota_portal.c  ota_portal.h  web_portal.h
storage/web/: index.html  (+4 more)
tools/: validate_component_manifests.py
(+112 files in other folders)
